# unified-hifi-control

./: .coderabbit.yaml  .dockerignore  .gitignore  .mcp.json  AGENTS.md  COMMERCIAL-LICENSE.md  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.ci  Dockerfile.release  HQPLAYER-MULTI-INSTANCE.md  LICENSE-PRIOR  Makefile  PHASE_4_INSTRUCTIONS.md  PHASE_5_INSTRUCTIONS.md  README.md  build.rs  clippy.toml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts
.ba/: config.json  issues.jsonl
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude-plugin/plugin/: plugin.json
.claude-plugin/plugin/skills/: sync-upstream.md
.github/: RELEASE_TEMPLATE.md  dependabot.yml
.github/workflows/: api-guard.yml  build.yml  docker.yml  pr-packages.yml  release.yml
.wm/: checkpoint.json  dive_context.md
.wm/sessions/322d918f-96d7-46cb-ad47-d546fbe4d3b8/: working_set.md
data/: hqp-config.example-multi.json
docs/: AGENTS.md  ARCHITECTURE-GAP-ANALYSIS.md  ARCHITECTURE-RECOMMENDATION-A.md  ARCHITECTURE-RECOMMENDATION-B-REJECTED.md  ARCHITECTURE.md  adapter.md  arch-linux.md  gh-release.md  lms-plugin.md  protocol.md  shadcn-migration-spec.md  ui-features.md
docs/adr/: 002-single-binary-assets.md
docs/architecture/: bus-design.md
docs/bus/: existing-patterns.md
docs/tasks/: phase-1-bus-foundation.md
e2e/: mobile.spec.ts
lms-plugin/: Helper.pm  Plugin.pm  Settings.pm  install.xml  repo.xml  strings.txt
lms-plugin/HTML/EN/plugins/UnifiedHiFi/settings/: basic.html
mcp/: index.js
plugin/.claude-plugin/: plugin.json
plugin/commands/: setup.md
public/: dx-components-theme.css  index.html  tailwind.css
scripts/: build-arch-package.js  build-binaries.js  build-lms-plugin.js  build-nas-packages.js
src/: aggregator.rs  coordinator.rs  embedded.rs  firmware.rs  index.js  input.css  lib.rs  lms-entry.js  main.rs  mdns.rs
src/adapters/: handle.rs  hqplayer.rs  lms.rs  lms_discovery.rs  mod.rs  mqtt.rs  openhome.rs  roon.rs  roon_browse.rs  traits.rs  upnp.rs
src/api/: mod.rs
src/app/: api.rs  embedded_assets.rs  mod.rs  settings_context.rs  sse.rs  theme.rs
src/app/components/: error_alert.rs  form_inputs.rs  hqp_controls.rs  layout.rs  mod.rs  nav.rs  theme.rs  volume.rs
src/app/pages/: dashboard.rs  hqplayer.rs  knobs.rs  lms.rs  mod.rs  settings.rs  zone.rs  zones.rs
src/bus/: adapter.js  debug.js  events.rs  index.js  mod.rs
src/bus/adapters/: hqp.js  lms.js  openhome.js  roon.js  upnp.js
src/components/button/: component.rs
src/components/collapsible/: component.rs
src/components/navbar/: component.rs
src/components/tabs/: component.rs
src/config/: mod.rs
src/firmware/: index.js
src/hqplayer/: client.js  service.js
src/knobs/: image.rs  mod.rs  rgb565.test.js  routes.js  routes.rs  store.js  store.rs
src/lib/: logger.js  mdns.js  paths.js  settings.js
src/lms/: client.js
src/mcp/: index.js  mod.rs
src/mqtt/: index.js
src/openhome/: client.js
src/roon/: client.js  client.test.js
src/server/: app.js
src/ui/: mod.rs  package-lock.json  package.json  vite.config.ts
src/ui/components/: layout.rs  mod.rs  nav.rs  theme.rs
src/ui/pages/: dashboard.rs  hqplayer.rs  knobs.rs  lms.rs  mod.rs  settings.rs  zone.rs  zones.rs
src/ui/src/: App.tsx  index.css
src/ui/src/components/layout/: index.ts  navbar.tsx  page-header.tsx  theme-toggle.tsx
src/ui/src/components/zones/: album-artwork.tsx  index.ts  playback-controls.tsx  zone-card.tsx  zone-selector.tsx
src/ui/src/hooks/: index.ts  use-hqplayer.ts  use-knobs.ts  use-settings.ts  use-status.ts  use-theme.ts
src/ui/src/lib/: api.ts
src/ui/src/pages/: control.tsx  index.ts  knobs.tsx  settings.tsx  zone.tsx
src/ui/src/types/: index.ts
src/upnp/: client.js
tests/: adapter_integration.rs  aggregator_lint.rs  api_contract.rs  arbitrary_find_lint.rs  architecture_lint.rs  await_in_lock_lint.rs  client_harness.rs  ignored_send_lint.rs  oneshot_leak_lint.rs  protocol_integration.rs  protocol_schema.rs  spawn_cancellation_lint.rs  unbounded_channel_lint.rs  volume_safety.rs  volume_step.rs  zones_sha_integration.rs
tests/fixtures/: api_routes.txt
tests/mock_servers/: hqplayer.rs  lms.rs  mod.rs  openhome.rs  roon.rs  upnp.rs
