[package]
name = "unified-hifi-control"
version = "3.0.0-rc.1"
edition = "2021"
authors = ["Muness Castle"]
description = "Source-agnostic hi-fi control bridge for hardware surfaces and Home Assistant"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/open-horizon-labs/unified-hifi-control"

[features]
default = ["server"]
server = ["dioxus/server"]
web = ["dioxus/web"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# Dioxus UI framework (SSR + client hydration)
dioxus = { version = "0.7", features = ["fullstack"] }

# Roon API (the key discovery!)
# Package is named "roon-api" in Cargo.toml, repo is "rust-roon-api"
roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.2.0", features = ["transport", "image", "status"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for HQPlayer) - rustls for cross-compilation
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }

# Crypto/hashing
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Regex for HTML parsing
regex = "1"

# URL encoding/parsing
urlencoding = "2"
url = "2"

# XML parsing (for HQPlayer protocol)
quick-xml = { version = "0.37", features = ["serialize"] }

# MQTT
rumqttc = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
config = "0.14"

# Error handling
thiserror = "2"
anyhow = "1"

# Image processing (for knobs LCD)
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
async-trait = "0.1"

# SSDP/UPnP discovery
ssdp-client = "2"
base64 = "0.22.1"
mdns-sd = "0.17.1"
gethostname = "1.1.0"

[[bin]]
name = "unified-hifi-control"
path = "src/main.rs"

[[bin]]
name = "protocol-checker"
path = "src/bin/protocol_checker.rs"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"
syn = { version = "2", features = ["full", "parsing", "visit"] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Cross-compilation targets for static musl builds
# Build with: cargo build --release --target x86_64-unknown-linux-musl
# Or use cross: cross build --release --target x86_64-unknown-linux-musl
# Available targets: x86_64-unknown-linux-musl, aarch64-unknown-linux-musl, armv7-unknown-linux-musleabihf
