[package]
name = "unified-hifi-control"
version = "0.0.0"  # Injected from git tag at build time
edition = "2021"
authors = ["Muness Castle"]
description = "Source-agnostic hi-fi control bridge for hardware surfaces and Home Assistant"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/open-horizon-labs/unified-hifi-control"

[features]
# Default to server for standalone cargo build/test (dx build uses explicit features)
default = ["server"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:roon-api",
    "dep:reqwest",
    "dep:rumqttc",
    "dep:tracing-subscriber",
    "dep:config",
    "dep:image",
    "dep:resvg",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:ssdp-client",
    "dep:mdns-sd",
    "dep:gethostname",
    "dep:rust-embed",
    "dep:mime_guess",
    "dep:http-body-util",
]
web = ["dioxus/web"]

[dependencies]
# Dioxus UI framework (SSR + client hydration + router)
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }

# Serialization (shared)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto/hashing (shared - pure Rust)
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Regex (shared)
regex = "1"

# URL encoding/parsing (shared)
urlencoding = "2"
url = "2"

# XML parsing (shared)
quick-xml = { version = "0.37", features = ["serialize"] }

# Logging (shared - tracing works in WASM)
tracing = "0.1"

# Error handling (shared)
thiserror = "2"
anyhow = "1"

# Date/time (shared)
chrono = { version = "0.4", features = ["serde"] }

# Async utilities (shared)
futures = "0.3"
async-trait = "0.1"

# Base64 (shared)
base64 = "0.22.1"

# Dioxus UI primitives (shared - needed for SSR and client hydration)
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }

# ============ SERVER-ONLY DEPENDENCIES ============
# These are optional and only included when building for server

# Web framework (server only)
axum = { version = "0.8", features = ["macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"], optional = true }

# Roon API (server only)
roon-api = { git = "https://github.com/open-horizon-labs/rust-roon-api.git", branch = "fix/fractional-volume", features = ["transport", "image", "status"], optional = true }
# TODO: Switch back to upstream after https://github.com/TheAppgineer/rust-roon-api/pull/1 is merged

# HTTP client (server only)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"], optional = true }

# MQTT (server only)
rumqttc = { version = "0.24", optional = true }

# Logging subscriber (server only - needs tokio)
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Config (server only)
config = { version = "0.14", optional = true }

# Image processing (server only)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"], optional = true }

# Tokio stream utilities (server only)
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tokio-util = { version = "0.7", optional = true }

# SSDP/UPnP/mDNS discovery (server only)
ssdp-client = { version = "2", optional = true }
mdns-sd = { version = "0.17.1", optional = true }
gethostname = { version = "1.1.0", optional = true }

# Embedded assets for single-binary distribution (server only, ADR 002)
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
http-body-util = { version = "0.1", optional = true }

# SVG rasterization (server only)
resvg = { version = "0.46.0", features = ["default"], optional = true }

# ============ WEB-ONLY DEPENDENCIES ============
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "DomTokenList", "Storage", "Request", "RequestInit", "Response", "Headers", "EventSource", "MessageEvent"] }
serde-wasm-bindgen = "0.6"
# getrandom needs js feature for WASM (used by rand)
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "unified-hifi-control"
path = "src/main.rs"

[[bin]]
name = "protocol-checker"
path = "src/bin/protocol_checker.rs"
required-features = ["server"]

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"
syn = { version = "2", features = ["full", "parsing", "visit"] }
walkdir = "2"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Cross-compilation targets for static musl builds
# Build with: cargo build --release --target x86_64-unknown-linux-musl
# Or use cross: cross build --release --target x86_64-unknown-linux-musl
# Available targets: x86_64-unknown-linux-musl, aarch64-unknown-linux-musl, armv7-unknown-linux-musleabihf
